--- a/gke-flask-flontend.yaml
+++ b/gke-flask-flontend.yaml
@@ -1,53 +1,24 @@
-# Copyright 2015 Google Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License
-
-# This file configures the bookshelf application frontend. The frontend serves
-# public web traffic.
-
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: bookshelf-frontend
+  name: gke-flask-frontend
   labels:
-    app: bookshelf
-# The bookshelf frontend replica set ensures that at least 3
-# instances of the bookshelf app are running on the cluster.
-# For more info about Pods see:
-#   https://cloud.google.com/container-engine/docs/pods/
+    app: gke-flask
 spec:
   replicas: 3
   template:
     metadata:
       labels:
-        app: bookshelf
+        app: gke-flask
         tier: frontend
     spec:
       containers:
-      - name: bookshelf-app
-        # Replace [GCLOUD_PROJECT] with your project ID or use `make template`.
-        image: gcr.io/[GCLOUD_PROJECT]/bookshelf
-        # This setting makes nodes pull the docker image every time before
-        # starting the pod. This is useful when debugging, but should be turned
-        # off in production.
+      - name: gke-flask-app
+        image: gcr.io/nobjas-test-project-161209/gke-flask
         imagePullPolicy: Always
-        # The PROCESSES environment variable is used by Honcho in the
-        # Dockerfile's CMD to control which processes are started. In this
-        # case, only the bookshelf process is needed.
         env:
         - name: PROCESSES
-          value: bookshelf
-        # The bookshelf process listens on port 8080 for web traffic by default.
+          value: gke-flask
         ports:
         - name: http-server
           containerPort: 8080
